Fix 'mice can drop' z-index in FI

--- a/src/modules/location-hud/floating-islands/styles.css
+++ b/src/modules/location-hud/floating-islands/styles.css
@@ -310,3 +310,8 @@ a.floatingIslandsHUD-flightLogButton.mousehuntTooltipParent {
   text-align: center;
   background-position: 10px 20px;
 }
+
+a.floatingIslandsHUD-islandLoot:hover,
+a.floatingIslandsHUD-islandLoot:focus {
+  z-index: 5;
+}
